# plc

./: Cargo.toml  README.md
docs/: fin.md  ledger.md
palace-core/: Cargo.toml
palace-core/src/: lib.rs  orphans.rs
palace-lsp/: Cargo.toml
palace-lsp/src/: index.rs  main.rs  planner.rs  server.rs
palace-orphans/: Cargo.toml
palace-orphans/src/: main.rs
plc/: Cargo.toml
plc-core/: Cargo.toml
plc-core/src/: calendar.rs  finance.rs  ledger.rs  lib.rs  orphans.rs
plc-lsp/: Cargo.toml
plc-lsp/src/: main.rs  planner.rs  server.rs
plc-orphans/: Cargo.toml
plc-orphans/src/: main.rs
plc/src/: config.rs  main.rs  note.rs  settings.rs
plc/src/cmd/: calview.rs  config.rs  daily.rs  do_notes.rs  doctor.rs  fin.rs  init.rs  isg.rs  ledger.rs  mod.rs  murmur.rs  orphans.rs  shot.rs  start.rs  stat.rs  top.rs  weekly.rs
