[workspace]
resolver = "2"
members = [
    "plc-core",
    "plc-orphans",
    "plc-lsp",
    "plc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
plc-core = { path = "plc-core" }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tower-lsp = "0.20"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "sync",
] }
dashmap = "6"
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
